# MiniRegexProject

./: CHANGELOG.md  MiniRegexProject.cabal  README.md  stack.yaml
.stack-work/: stack.sqlite3
.stack-work/ghci/118db976/: cabal_macros.h
.stack-work/ghci/1e849e5a/: cabal_macros.h
.stack-work/ghci/27b06761/: cabal_macros.h
.stack-work/ghci/a5929020/: cabal_macros.h
.stack-work/ghci/b2949632/: cabal_macros.h
.stack-work/install/8d7e95af/pkgdb/: MiniRegexProject-0.1.0.0-7wmerZCIOk94sHS3wm9YzN.conf  package.cache
src/: DFA.hs  Main.hs  NFA.hs  RegexMatcher.hs  RegexParser.hs  RegexTree.hs  Tests.hs
