cabal-version:       >=1.10
name:                MiniRegexProject
version:             0.1.0.0
build-type:          Simple

library
  hs-source-dirs:    src
  exposed-modules:   RegexMatcher
  other-modules:     RegexTree RegexParser NFA DFA
  build-depends:     base >=4.7 && <5, containers
  default-language:  Haskell2010

executable MiniRegexProject-exe
  hs-source-dirs:      src
  main-is:             Main.hs
  build-depends:       base >=4.7 && <5, containers, MiniRegexProject
  default-language:    Haskell2010